feat: before implementing tiptap

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,10 +121,25 @@
   }
 }
 
-.docx-wrapper{
+.docx-wrapper {
   background-color: inherit !important;
 }
 
-.temp-container {
+
+  ::-webkit-scrollbar {
+    width: 0.25rem;
+  }
   
-}
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--tt-scrollbar-color) transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--tt-scrollbar-color);
+    border-radius: 9999px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
